to fix: glasses,About bottom figures, vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ nav{
 
 
 /*=========== Сart Route =============================*/
-dialog{
+.cart-route-dialog{
     position: absolute;
     left: 0;
     right: 0;
@@ -201,6 +201,10 @@ dialog{
     background: white;
     color: black;
 }
+.cart-route-dialog span{
+    background-color:yellow;
+}
+
 
 .CartRoute-allRows-container{
     display:flex;
@@ -635,13 +639,14 @@ footer{
         width:50%;
         aspect-ratio: 1/1;
         text-align: center;
-        margin: 10px 0;
     }
     .About-figures img{
         width:100%;
         height:100%;
         object-fit: contain;
+        object-position: top;
     }
+
 }
 /*для планш гориз */
 @media screen and (min-width:768px) and (max-width: 1200px)  {
